--- a/typedoc/index.html
+++ b/typedoc/index.html
@@ -75,10 +75,10 @@
 					<li>start the server<pre><code class="language-bash">./tile38_docker.sh &amp;
 mpm install
 npm run start</code></pre>
-					</li>
-				</ul>
-				<p>#Tile38 Commands:</p>
-				<ul>
+						#How to contribute
+						The code is in TypeScript, so you have to transpile it to JavaScript before running it
+						To do that, please run<pre><code class="language-bash">npm run tsc</code></pre>
+					#Tile38 Commands:</li>
 					<li><a href="https://tile38.com/commands/set/">https://tile38.com/commands/set/</a></li>
 					<li><a href="https://tile38.com/commands/expire/">https://tile38.com/commands/expire/</a></li>
 					<li><a href="https://tile38.com/commands/nearby/">https://tile38.com/commands/nearby/</a>
